--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -13,8 +13,7 @@ build:
 
 requirements:
   build:
-    - {{ compiler('fortran') }}   # [not win]
-    - m2w64-gcc-fortran           # [win]
+    - {{ compiler('fortran') }}
   host:
     - python
     - pip
