--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -13,7 +13,8 @@ build:
 
 requirements:
   build:
-    - {{ compiler('fortran') }}
+    - {{ compiler('fortran') }}   # [not win]
+    - m2w64-gcc-fortran           # [win]
   host:
     - python
     - pip
